# gmc-unicorn

./: .gitignore  docker-compose.yml  main.py  package.json  pyproject.toml
.ai/: debug-log.md
.bmad-core/: core-config.yaml  install-manifest.yaml
.claude/: settings.local.json
.github/: branch-protection-rules.md
.github/workflows/: ci.yml  deploy.yml
docs/: api-documentation.md
docs/architecture/: ai-development-infrastructure-intelligence-directory.md  alternative-technology-analysis.md  api-key-security-credential-management.md  architecture-summary-and-recommendations.md  architecture-synchronization-status.md  architecture-validation-complete-ready.md  coding-standards.md  components.md  database-architecture-enhancements.md  deployment-architecture.md  error-handling-strategy.md  high-level-architecture.md  implementation-standards-practices.md  index.md  introduction.md  monitoring-and-observability.md  network-security-infrastructure.md  system-architecture-diagrams.md
docs/frontend/: accessibility-requirements.md  animation-micro-interactions.md  branding-style-guide.md  component-library-design-system.md  content-strategy-user-support.md  educational-analytics-learning-framework.md  error-handling-recovery-framework.md  index.md  information-architecture-ia.md  introduction.md  next-steps.md  performance-specifications.md  responsiveness-strategy.md  strategic-update-summary-investment-performance-optimization-focus.md  strategy-tuning-system-ui-architecture.md  user-flows.md  wireframes-mockups.md
docs/prd/: branding-visual-identity.md  checklist-results-report.md  development-standards.md  epic-0-project-management-foundation.md  epic-1-foundation-excel-integration-infrastructure.md  epic-2-project-scoped-decision-input-system-core-analysis-engine.md  epic-3-complete-financial-analysis-integration.md  epic-4-advanced-analysis-components-valuation-system.md  epic-5-project-managed-interactive-dashboard-user-experience-excellence.md  epic-6-project-scoped-ai-powered-individual-user-configuration-directory-management.md  epic-7-educational-analytics-faculty-tools.md  epic-implementation-timeline.md  epic-list.md  goals-and-background-context.md  index.md  next-steps.md  post-mvp-vision-automation-and-advanced-integration.md  requirements.md  target-user-personas.md  technical-assumptions.md  user-interface-design-goals.md
docs/stories/: 1.1.story.md
frontend/: .dockerignore  Dockerfile.dev  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx
infrastructure/kong/: kong.yml
intelligence/: README.md
overview/: GMC-manual_summary.md  gmc_analysis.xlsx
overview/gmc_history_sample/: HstY15Q1.Xls  HstY15Q2.Xls  HstY15Q3.Xls  HstY15Q4.Xls  HstY16Q1.Xls
overview/gmc_report_sample/: W122162.xls  W122163.xls  W122164.xls  W122171.xls  W122172.xls
services/gmc-calculation-service/: Dockerfile  requirements.txt
services/knowledge-graph-service/: Dockerfile  requirements.txt
services/user-management-service/: Dockerfile  requirements.txt
(+32 files in other folders)
