[project]
name = "gmc-app"
version = "0.1.0"
description = "GMC Dashboard - Educational Analytics Platform for Strategic Business Analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "flask-jwt-extended>=4.5.0",
    "flask-sqlalchemy>=3.0.0",
    "flask-migrate>=4.0.0",
    "flask-socketio>=5.3.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "redis>=4.5.0",
    "celery>=5.3.0",
    "openpyxl>=3.1.0",
    "xlwings>=0.31.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "gunicorn>=21.0.0",
    "prometheus-client>=0.19.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-flask>=1.3.0",
    "pytest-mock>=3.12.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0"
]

database = [
    "neo4j>=5.14.0",
    "pymongo>=4.6.0",
    "motor>=3.3.0",
    "weaviate-client>=3.25.0",
    "clickhouse-driver>=0.2.0"
]

ai = [
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "google-generativeai>=0.3.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "catboost>=1.2.0",
    "xgboost>=2.0.0",
    "mlflow>=2.8.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gmc_app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --strict-config --cov=services --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["services"]
omit = ["*/tests/*", "*/venv/*", "*/__pycache__/*"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["services", "shared"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[dependency-groups]
ai = [
    "anthropic>=0.64.0",
    "catboost>=1.2.8",
    "google-generativeai>=0.8.5",
    "mlflow>=3.3.2",
    "openai>=1.102.0",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.1.0",
    "xgboost>=3.0.4",
]
database = [
    "clickhouse-driver>=0.2.9",
    "motor>=3.7.1",
    "neo4j>=5.28.2",
    "pymongo>=4.14.1",
    "weaviate-client>=4.16.9",
]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
